test/files/neg/bug900.check
bug900.scala:4: error: type mismatch;
 found   : Foo.this.x.type (with underlying type Foo.this.bar)
 required: scala.AnyRef
Note that implicit conversions are not applicable because they are ambiguous:
 both method any2stringadd in object Predef of type (scala.Any)scala.runtime.StringAdd
 and method any2ArrowAssoc in object Predef of type [a](a)scala.Predef.ArrowAssoc[a]
 are possible conversion functions from Foo.this.x.type to scala.AnyRef
        def break(): x.type
                     ^
one error found
